# dissertation-project

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake  run_docker.sh
src/: FilterType.h  IDS.cpp  IDS.h  PacketCapture.cpp  PacketCapture.h  PacketEvent.h  PacketFilter.h  Sniffer.cpp  Sniffer.h  check_dependencies.cpp  check_dependencies.h  main  main.cpp
src/pcapplusplus/lib/cmake/pcapplusplus/: PcapPlusPlusTargets-release.cmake  PcapPlusPlusTargets.cmake
